--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -1,48 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.Testing">
+    android:theme="@style/Theme.Testing"
+    tools:context="ui.onboarding.OnboardingFragment"
+    android:background="@color/dark_purple">
 
+    <!-- For fragment container -->
+    <FrameLayout
+        android:id="@+id/fl_slider"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginBottom="200dp"
+        android:layout_marginHorizontal="30dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <include layout="@layout/fragment_onboarding_item"
+            android:id="@+id/content"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp2_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
+
+    <!-- markers -->
     <LinearLayout
+        android:id="@+id/ll_marker_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:layout_marginVertical="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fl_slider">
 
-        <ImageView
-            android:id="@+id/onboarding_image"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_gravity="center"
-            android:padding="20dp"
-            android:layout_marginTop="50dp"/>
-
-        <TextView
-            android:id="@+id/onboarding_title"
+        <Button
+            android:id="@+id/skip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:maxLines="2"
-            android:padding="10dp"
-            android:fontFamily="@font/roboto_black"
-            android:textAlignment="center"
-            android:textColor="@color/design_default_color_on_primary"
-            android:textSize="24sp" />
+            android:text="Skip"
+            android:textSize="20sp"
+            android:background="@drawable/roundstyle"
+            android:backgroundTint="@color/transparent"
+            android:textColor="@color/light_grey"
+            android:layout_marginRight="35dp"/>
 
-        <TextView
-            android:id="@+id/onboarding_content"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/iv_first_circle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="6dp"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:justificationMode="inter_word"
-            android:padding="10dp"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:src="@drawable/comp_view_circle_gray" />
 
+        <ImageView
+            android:id="@+id/iv_second_circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="6dp"
+            android:layout_gravity="center"
+            android:src="@drawable/comp_view_circle_gray" />
+
+        <ImageView
+            android:id="@+id/iv_third_circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="6dp"
+            android:layout_gravity="center"
+            android:src="@drawable/comp_view_circle_gray" />
+
+        <Button
+            android:id="@+id/next"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Next"
+            android:paddingHorizontal="30dp"
+            android:background="@drawable/roundstyle"
+            android:backgroundTint="@color/light_purple"
+            android:textColor="@color/white"
+            android:layout_marginLeft="35dp"/>
 
     </LinearLayout>
-</ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
