--- a/app/src/main/res/layout/keyboard_activity_chart.xml
+++ b/app/src/main/res/layout/keyboard_activity_chart.xml
@@ -51,7 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:padding="2dp"
-            android:visibility="gone">
+            android:visibility="visible">
+
         </com.github.mikephil.charting.charts.LineChart>
     </LinearLayout>
 
