--- a/app/src/main/res/layout/sleep_data_card.xml
+++ b/app/src/main/res/layout/sleep_data_card.xml
@@ -231,6 +231,7 @@
             android:layout_height="match_parent"
             android:fontFamily="@font/roboto"
             android:padding="20dp"
+            android:id="@+id/SleepDataViewHiddenContent"
             android:text="@string/home_sleep_data_hidden_content"
             android:textColor="@color/light_grey"
             android:textSize="18sp"
