--- a/app/src/main/res/layout/fragment_date.xml
+++ b/app/src/main/res/layout/fragment_date.xml
@@ -3,27 +3,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     tools:context=".ui.menu.DateFragment"
     android:background="@color/dark_purple">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:paddingTop="20dp"
+        android:layout_gravity="center"
+        android:paddingTop="10dp"
         android:paddingBottom="5dp">
 
-    <ImageView
-        android:id="@+id/arrowLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:padding="5dp"
-        android:layout_alignBottom="@id/currentDate"
-        android:layout_toStartOf="@id/currentDate"
-        app:tint="@color/light_grey"
-        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />
+        <!--on below line we are creating
+        a button for date picker-->
+        <ImageButton
+            android:id="@+id/PickDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="80dp"
+            android:layout_marginLeft="30dp"
+            android:padding="5dp"
+            android:layout_alignEnd="@id/arrowLeft"
+            android:layout_alignBottom="@id/currentDate"
+            android:src="@drawable/ic_baseline_calendar_month_24"
+            android:textAllCaps="false"
+            android:backgroundTint="@color/dark_purple"/>
+
+        <ImageView
+            android:id="@+id/arrowLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/currentDate"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="1dp"
+            android:layout_toStartOf="@id/currentDate"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
+            app:tint="@color/light_grey" />
+
+        <TextView
+            android:id="@+id/arrowLeftText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/arrowLeft"
+            android:layout_alignStart="@id/arrowLeft"
+            android:gravity="center_vertical"
+            android:padding="2dp"
+            android:text="Previous"
+            android:textColor="@color/white" />
+
 
     <TextView
         android:id="@+id/currentDate"
@@ -33,19 +64,34 @@
         android:gravity="center_horizontal"
         android:textColor="@color/white"
         android:textSize="22sp"
-        android:padding="10dp"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="10dp"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/roboto_black"/>
 
-    <ImageView
-        android:id="@+id/arrowRight"
-        app:tint="@color/light_grey"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_toEndOf="@id/currentDate"
-        android:padding="5dp"
-        android:layout_alignBottom="@id/currentDate"
-        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
+        <ImageView
+            android:id="@+id/arrowRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/currentDate"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="1dp"
+            android:layout_toEndOf="@id/currentDate"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
+            app:tint="@color/light_grey" />
+
+        <TextView
+            android:id="@+id/arrowRightText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/arrowRight"
+            android:layout_alignStart="@id/arrowRight"
+            android:gravity="center_vertical"
+            android:padding="2dp"
+            android:text="Next"
+            android:textColor="@color/white" />
     </RelativeLayout>
 </FrameLayout>
